--- a/PlanIt/PlanIt.csproj
+++ b/PlanIt/PlanIt.csproj
@@ -23,8 +23,15 @@
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+        <PackageReference Include="MessageBox.Avalonia" Version="3.3.0" />
         <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
         <PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8" />
         <PackageReference Include="Svg.Controls.Skia.Avalonia" Version="11.3.6.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="ReactiveUI">
+        <HintPath>C:\Users\alex2\.nuget\packages\reactiveui\22.2.1\lib\net9.0\ReactiveUI.dll</HintPath>
+      </Reference>
     </ItemGroup>
 </Project>
