--- a/PlanIt/PlanIt.Data/PlanIt.Data.csproj
+++ b/PlanIt/PlanIt.Data/PlanIt.Data.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="3.5.1" />
+      <PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8" />
     </ItemGroup>
 
 </Project>
