--- a/PlanIt/PlanIt.Core1/PlanIt.Core1.csproj
+++ b/PlanIt/PlanIt.Core1/PlanIt.Core1.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net9.0;net9.0-windows10.0.26100.0</TargetFrameworks>
+        <TargetFrameworks>net9.0;net9.0-windows10.0.19041.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -9,12 +9,11 @@
     <ItemGroup>
       <PackageReference Include="Avalonia" Version="11.3.9" />
       <PackageReference Include="MessageBox.Avalonia" Version="3.3.0" />
-      <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
       <PackageReference Include="MongoDB.Driver" Version="3.5.1" />
       <PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8" />
     </ItemGroup>
 
-    <PropertyGroup Condition="$(TargetFramework.StartsWith('net9.0-windows10'))">
+    <PropertyGroup Condition="'$(OS)' == 'Windows_NT'">
         <DefineConstants>WINDOWS</DefineConstants>
     </PropertyGroup>
 
