--- a/PlanIt/PlanIt.Background/PlanIt.Background.csproj
+++ b/PlanIt/PlanIt.Background/PlanIt.Background.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
         <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.9" />
+        <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     </ItemGroup>
 
     <PropertyGroup Condition="$(TargetFramework.StartsWith('net9.0-windows10'))">
