Background app divided to Monitorer and Notificator; Fixed failing initializing notifications; AppSettings changed; PipeServer changed to handle multiple connections; PipeClient changed to handle multiple-connected server; Connection transmittion rules set; TimeMonitor adding objects logic modified; Icon changed; Bug fixes; Initial production release v1.0

--- a/PlanIt/AppUI/AppUI.csproj
+++ b/PlanIt/AppUI/AppUI.csproj
@@ -9,8 +9,9 @@
         <RootNamespace>PlanIt.UI</RootNamespace>
         <AssemblyName>PlanIt</AssemblyName>
         <ApplicationIcon>Assets/planit-icon.ico</ApplicationIcon>
-        <PublishAot>true</PublishAot>
+        <PublishAot>false</PublishAot>
         <BuiltInComInteropSupport>false</BuiltInComInteropSupport>
+        <PublishTrimmed>false</PublishTrimmed>
     </PropertyGroup>
 
     <PropertyGroup Condition="$(TargetFramework.StartsWith('net9.0-windows10'))">
