--- a/PlanIt/Data/appsettings.json
+++ b/PlanIt/Data/appsettings.json
@@ -1,8 +1,9 @@
 {
-  "AppName": "Notificator",
-  "ExeName": "Notificator",
-  "MaxConnections": 1,
-  "BufferSize": 512,
-  "PipeName": "PlanItPipe",
-  "Theme": "dark"
+  "backgroundName": "MonitorService",
+  "backgroundNameExe": "MonitorService",
+  "notificatorName": "Notificator",
+  "notificatorNameExe": "Notificator",
+  "bufferSize": 512,
+  "pipeName": "PlanItPipe",
+  "theme": "dark"
 }
