--- a/PlanIt/MonitorService/MonitorService.csproj
+++ b/PlanIt/MonitorService/MonitorService.csproj
@@ -4,20 +4,19 @@
         <TargetFrameworks>net9.0;net9.0-windows10.0.26100.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <UserSecretsId>dotnet-PlanIt.Background-ea766dc4-f7f2-4f8c-aacf-d080ee3c1d99</UserSecretsId>
-        <OutputType>Exe</OutputType>
-        <RootNamespace>PlanIt.Notificator</RootNamespace>
+        <UserSecretsId>dotnet-MonitoreService-97edaadc-1cfe-4c32-a6e3-02d25bfcd1e4</UserSecretsId>
+        <OutputType Condition="'$(OS)' == 'Windows_NT'">WinExe</OutputType>
+        <OutputType Condition="'$(OS)' != 'Windows_NT'">Exe</OutputType>
+        <RootNamespace>PlanIt.MonitorService</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
-        <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.9" />
-        <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
-    </ItemGroup>
 
     <PropertyGroup Condition="$(TargetFramework.StartsWith('net9.0-windows10'))">
         <DefineConstants>WINDOWS</DefineConstants>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9"/>
+    </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Core\Core.csproj" />
